Change icons to svg

--- a/snippets/size-block.liquid
+++ b/snippets/size-block.liquid
@@ -18,10 +18,10 @@
                 <img loading="lazy" src="{{ 's-size.jpg' | asset_img_url: 'x200' }}">
               </div>
               <div class="one-whole">
-              <img loading="lazy" src="{{ 'timer-icon.png' | asset_url }}">
+              <img loading="lazy" src="{{ 'Icons_time.svg' | asset_url }}" style="width: 23px;">
               <div class="pp-label">Working hours</div>
               <div class="sm-text">From 2 hours</div>
-              <img loading="lazy" src="{{ 'pazl-icon.png' | asset_url }}" style="pb-10">
+              <img loading="lazy" src="{{ 'Icons_pcs.svg' | asset_url }}" style="width: 23px;">
               <div class="pp-label">Puzzle pieces</div>
               <div class="puzzle-pieces">97-110</div>
               <span style='font-size:20px;'>&#128527;</span>
@@ -37,10 +37,10 @@
             <img loading="lazy" src="{{ 'm-size.jpg' | asset_img_url: 'x200' }}">
           </div>
           <div class="one-whole">
-          <img loading="lazy" src="{{ 'timer-icon.png' | asset_url }}">
+          <img loading="lazy" src="{{ 'Icons_time.svg' | asset_url }}" style="width: 23px;">
           <div class="pp-label">Working hours</div>
           <div class="sm-text">From 4 hours</div>
-          <img loading="lazy" src="{{ 'pazl-icon.png' | asset_url }}" style="pb-10">
+          <img loading="lazy" src="{{ 'Icons_pcs.svg' | asset_url }}" style="width: 23px;">
           <div class="pp-label">Puzzle pieces</div>
           <div class="puzzle-pieces">172-216</div>
           <span style='font-size:20px;'>&#128522;</span>
@@ -56,10 +56,10 @@
           <img loading="lazy" src="{{ 'l-size.jpg' | asset_img_url: 'x200' }}">
         </div>
           <div class="one-whole">
-          <img loading="lazy" src="{{ 'timer-icon.png' | asset_url }}">
+          <img loading="lazy" src="{{ 'Icons_time.svg' | asset_url }}" style="width: 23px;">
           <div class="pp-label">Working hours</div>
           <div class="sm-text">From 6 hours</div>
-          <img loading="lazy" src="{{ 'pazl-icon.png' | asset_url }}" style="pb-10">
+          <img loading="lazy" src="{{ 'Icons_pcs.svg' | asset_url }}" style="width: 23px;">
           <div class="pp-label">Puzzle pieces</div>
           <div class="puzzle-pieces">268-366</div>
           <span style='font-size:20px;'>&#128523;</span>
@@ -75,10 +75,10 @@
           <img loading="lazy" src="{{ 'xl-size.jpg' | asset_img_url: 'x200' }}">
         </div>
           <div class="one-whole">
-          <img loading="lazy" src="{{ 'timer-icon.png' | asset_url }}">
+          <img loading="lazy" src="{{ 'Icons_time.svg' | asset_url }}" style="width: 23px;">
           <div class="pp-label">Working hours</div>
           <div class="sm-text">From 10 hours</div>
-          <img loading="lazy" src="{{ 'pazl-icon.png' | asset_url }}" style="pb-10">
+          <img loading="lazy" src="{{ 'Icons_pcs.svg' | asset_url }}" style="width: 23px;">
           <div class="pp-label">Puzzle pieces</div>
           <div class="puzzle-pieces">688-707</div>
           <span style='font-size:20px;'>&#128526;</span>
@@ -94,10 +94,10 @@
           <img loading="lazy" src="{{ 'xxl-size.jpg' | asset_img_url: 'x200' }}">
         </div>
           <div class=" one-whole">
-          <img loading="lazy" src="{{ 'timer-icon.png' | asset_url }}">
+          <img loading="lazy" src="{{ 'Icons_time.svg' | asset_url }}" style="width: 23px;">
           <div class="pp-label">Working hours</div>
           <div class="sm-text">From 3 days</div>
-          <img loading="lazy" src="{{ 'pazl-icon.png' | asset_url }}" style="pb-10">
+          <img loading="lazy" src="{{ 'Icons_pcs.svg' | asset_url }}" style="width: 23px;">
           <div class="pp-label">Puzzle pieces</div>
           <div class="puzzle-pieces">1444-1570</div>
           <span style='font-size:20px;'>&#128525;</span>
