--- a/snippets/swatch.liquid
+++ b/snippets/swatch.liquid
@@ -60,6 +60,7 @@ Set the extension of your color files below. Use 'png', 'jpeg', 'jpg' or 'gif'.
       {% if is_color and section.settings.swatch_option == 'with_background' %}
       <div class="tooltip">{{ value }}</div>
       {% endif %}
+
       {% if product.type == 'Puzzle' and swatch == 'Size' %}
       {% assign size_count = size_count | plus: 1 %}
       <input id="swatch-{{ option_index }}-{{ value | handle }}-{{ section.id }}" type="radio" ga-data="{{size_count}}" name="option-{{ option_index }}" value="{{ value | escape }}"{% if forloop.first %}{% unless section.settings.enable_default_variant %} checked{% endunless %}{% endif %} {% unless variant.available %}disabled{% endunless %} />
@@ -68,15 +69,7 @@ Set the extension of your color files below. Use 'png', 'jpeg', 'jpg' or 'gif'.
         <img class="crossed-out" src="{% comment %}ly_asset_replace_for_[ 'soldout.png' | asset_url ]_begin{% endcomment %}{% assign ly_asset = 'soldout.png' %}{% include 'ly-asset' with ly_asset %}{{ ly_translation  }}{% comment %}ly_asset_replace_end{% endcomment %}" />
       </label>
       {% else %}
-      <label style="
-    height: 100% !important;
-    display: flex;
-    flex-wrap: nowrap;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    align-content: center;
-" for="swatch-{{ option_index }}-{{ value | handle }}-{{ section.id }}">
+      <label style="height: 100% !important;display: flex;flex-wrap: nowrap;flex-direction: row;align-items: center;justify-content: space-around;align-content: center;" for="swatch-{{ option_index }}-{{ value | handle }}-{{ section.id }}">
         {%- if size_count == 3 -%}
         <div class="product__labels most-popular-label">
             <span class="product__label product__label--most-popular">most popular</span>
@@ -94,7 +87,7 @@ Set the extension of your color files below. Use 'png', 'jpeg', 'jpg' or 'gif'.
         <div class="size"><div><span>Royal </span><span>Size</span></div></div>
       {% endcase %}
         <div class="sw_content_outer">
-          {% case size_count%}
+          {% case size_count %}
           {% when 2 %}
           <div class="sw_image_outer"><span class="sw_badge">2x bigger</span></div>
           {% when 3 %}
@@ -113,12 +106,12 @@ Set the extension of your color files below. Use 'png', 'jpeg', 'jpg' or 'gif'.
           <span class="sw_val">{{ value | split: '—' | last }}</span>
         </div>
     </div>
-        <img class="crossed-out" src="{% comment %}ly_asset_replace_for_[ 'soldout.png' | asset_url ]_begin{% endcomment %}{% assign ly_asset = 'soldout.png' %}{% include 'ly-asset' with ly_asset %}{{ ly_translation  }}{% comment %}ly_asset_replace_end{% endcomment %}" />
+        <img class="crossed-out" src="{% assign ly_asset = 'soldout.png' %}{% include 'ly-asset' with ly_asset %}{{ ly_translation  }}{% comment %}ly_asset_replace_end{% endcomment %}" />
       </label>
       {% else %}
       <label for="swatch-{{ option_index }}-{{ value | handle }}-{{ section.id }}">
         {{ value }}
-        <img class="crossed-out" src="{% comment %}ly_asset_replace_for_[ 'soldout.png' | asset_url ]_begin{% endcomment %}{% assign ly_asset = 'soldout.png' %}{% include 'ly-asset' with ly_asset %}{{ ly_translation  }}{% comment %}ly_asset_replace_end{% endcomment %}" />
+        <img class="crossed-out" src="{% assign ly_asset = 'soldout.png' %}{% include 'ly-asset' with ly_asset %}{{ ly_translation  }}{% comment %}ly_asset_replace_end{% endcomment %}" />
       </label>
       {% endif %}
 
