Storyblock height issue fixed

--- a/snippets/size-block.liquid
+++ b/snippets/size-block.liquid
@@ -67,7 +67,7 @@
       </div>
       <div class="grid__item large-up--one-fifth medium-down--one-whole">
         <div class="size one-whole">
-          <div class="size-label">Royal Set</div>
+          <div class="size-label">Royal Size</div>
           <div class="bigger-text">7x bigger</div>
         </div>
         <div class="one-whole">
@@ -86,7 +86,7 @@
       </div>
       <div class="grid__item large-up--one-fifth medium-down--one-whole">
         <div class="size one-whole">
-          <div class="size-label">Grand Royal Set</div>
+          <div class="size-label">Grand Royal Size</div>
           <div class="bigger-text">15x bigger</div>
         </div>
         <div class="one-whole">
