--- a/snippets/size-block.liquid
+++ b/snippets/size-block.liquid
@@ -9,7 +9,7 @@
       </div>
     </div>
     <div class="grid">
-      <div class="grid__item large-up--one-fifth medium-down--one-whole">
+      <div class="grid__item large-up--one-quarter medium-down--one-whole">
         <div class="size one-whole">
           <div class="size-label">S</div>
         </div>
@@ -27,7 +27,7 @@
               <span style='font-size:20px;'>&#128527;</span>
             </div>
       </div>
-      <div class="grid__item large-up--one-fifth medium-down--one-whole">
+      <div class="grid__item large-up--one-quarter medium-down--one-whole">
           <div class="size one-whole">
             <div class="size-label">M</div>
             <div class="bigger-text">2x bigger</div>
@@ -46,7 +46,7 @@
           <span style='font-size:20px;'>&#128522;</span>
         </div>
       </div>
-      <div class="grid__item large-up--one-fifth medium-down--one-whole">
+      <div class="grid__item large-up--one-quarter medium-down--one-whole">
         <div class="size one-whole">
           <div class="size-label">King Size</div>
           <div class="bigger-text">3x bigger</div>
@@ -65,7 +65,7 @@
           <span style='font-size:20px;'>&#128523;</span>
         </div>
       </div>
-      <div class="grid__item large-up--one-fifth medium-down--one-whole">
+      <div class="grid__item large-up--one-quarter medium-down--one-whole">
         <div class="size one-whole">
           <div class="size-label">Royal Size</div>
           <div class="bigger-text">7x bigger</div>
@@ -82,25 +82,6 @@
           <div class="pp-label">Puzzle pieces</div>
           <div class="puzzle-pieces">688-707</div>
           <span style='font-size:20px;'>&#128526;</span>
-        </div>
-      </div>
-      <div class="grid__item large-up--one-fifth medium-down--one-whole">
-        <div class="size one-whole">
-          <div class="size-label">Grand Royal Size</div>
-          <div class="bigger-text">15x bigger</div>
-        </div>
-        <div class="one-whole">
-          <div class="puzzle-size">≈A1</div>
-          <img loading="lazy" src="{{ 'xxl-size.jpg' | asset_img_url: 'x200' }}">
-        </div>
-          <div class=" one-whole">
-          <img loading="lazy" src="{{ 'Icons_time.svg' | asset_url }}" style="width: 23px;">
-          <div class="pp-label">Working hours</div>
-          <div class="sm-text">From 3 days</div>
-          <img loading="lazy" src="{{ 'Icons_pcs.svg' | asset_url }}" style="width: 23px;">
-          <div class="pp-label">Puzzle pieces</div>
-          <div class="puzzle-pieces">1444-1570</div>
-          <span style='font-size:20px;'>&#128525;</span>
         </div>
       </div>
     </div>
