--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -1291,40 +1291,10 @@ var enable_defaul_variant = false;
         "default": true
       },
 	  {
-        "type": "select",
+        "type": "text",
         "id": "delivery_time_number",
         "label": "Delivery time",
-        "default": "1-3",
-          "options": [
-          {
-            "value": "1-3",
-            "label": "1 to 3"
-          },
-          {
-            "value": "3-5",
-            "label": "3 to 5"
-          },
-          {
-            "value": "5-10",
-            "label": "5 to 10"
-          },
-		  {
-            "value": "7-14",
-            "label": "7 to 14"
-          },
-		  {	
-            "value": "14-21",
-            "label": "14 to 21"
-          },
-		  {	
-            "value": "14-30",
-            "label": "14 to 30"
-          },
-		  {	
-            "value": "21 - 30",
-            "label": "21 to 30"
-          } 
-        ] 
+        "default": "1-3" 
       },	  
 	  {
 		"type": "header",
