Working huor label was change to Assembly time

--- a/snippets/size-block.liquid
+++ b/snippets/size-block.liquid
@@ -19,7 +19,7 @@
               </div>
               <div class="one-whole">
               <img loading="lazy" src="{{ 'Icons_time.svg' | asset_url }}" style="width: 23px;">
-              <div class="pp-label">Working hours</div>
+              <div class="pp-label">Assembly time</div>
               <div class="sm-text">From 2 hours</div>
               <img loading="lazy" src="{{ 'Icons_pcs.svg' | asset_url }}" style="width: 23px;">
               <div class="pp-label">Puzzle pieces</div>
@@ -38,7 +38,7 @@
           </div>
           <div class="one-whole">
           <img loading="lazy" src="{{ 'Icons_time.svg' | asset_url }}" style="width: 23px;">
-          <div class="pp-label">Working hours</div>
+          <div class="pp-label">Assembly time</div>
           <div class="sm-text">From 4 hours</div>
           <img loading="lazy" src="{{ 'Icons_pcs.svg' | asset_url }}" style="width: 23px;">
           <div class="pp-label">Puzzle pieces</div>
@@ -57,7 +57,7 @@
         </div>
           <div class="one-whole">
           <img loading="lazy" src="{{ 'Icons_time.svg' | asset_url }}" style="width: 23px;">
-          <div class="pp-label">Working hours</div>
+          <div class="pp-label">Assembly time</div>
           <div class="sm-text">From 6 hours</div>
           <img loading="lazy" src="{{ 'Icons_pcs.svg' | asset_url }}" style="width: 23px;">
           <div class="pp-label">Puzzle pieces</div>
@@ -76,7 +76,7 @@
         </div>
           <div class="one-whole">
           <img loading="lazy" src="{{ 'Icons_time.svg' | asset_url }}" style="width: 23px;">
-          <div class="pp-label">Working hours</div>
+          <div class="pp-label">Assembly time</div>
           <div class="sm-text">From 10 hours</div>
           <img loading="lazy" src="{{ 'Icons_pcs.svg' | asset_url }}" style="width: 23px;">
           <div class="pp-label">Puzzle pieces</div>
