Small issue fixed

--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -262,7 +262,7 @@
         <input  type="submit" class="custome_checkout" value="checkout" name="checkout"/>
 
       </form>
-      <style>.storyblock {padding-bottom: 10px;padding-top: 60px;}}</style>
+      <style>.storyblock {padding-bottom: 10px;padding-top: 60px;}</style>
       <div class="small--hide"  style="max-width: 285px;margin: 0px auto;">
         {% case product.title %}
         {% when 'Charming Owl' %}
